# freyr

./: .clang-format  .editorconfig  .gitignore  .prettierrc  CMakeLists.txt  README.md  vcpkg.json
cmake/: clang-format.cmake  cmake-functions.cmake  format.cmake  freki.cmake  freyr.cmake  toolchain.cmake  vcpkg.cmake
examples/: demo.mjs
examples/demo/: CMakeLists.txt  index.js  main.js  package.json  semantics.js
projects/imgui/: CMakeLists.txt  main.cpp
projects/opengl/: esUtil.c  glbook.cpp
projects/sdl2/: CMakeLists.txt  main.cpp
projects/semantics/: CMakeLists.txt  bindings.cpp  node_exec.js  semantics.cpp
projects/semantics/test/: CMakeLists.txt  semantics.cpp
projects/static/: index.html  m.js  package.json  test_exec.js
src/: CMakeLists.txt  formatting.cpp
src/imgui/: CMakeLists.txt  main.cpp
src/main/: CMakeLists.txt  main.cpp
src/opengl/: CMakeLists.txt  esUtil.h
src/opengl/includes/freyr/opengl/: esUtil.h
src/opengl/src/: esUtil.c  glbook.cpp
src/sdl2/: CMakeLists.txt
src/sdl2/src/: main.cpp
src/semantics/: CMakeLists.txt  node_exec.js  semantics.hpp
src/semantics/src/: semantics.cpp
src/semantics/test/: CMakeLists.txt  semantics.cpp
src/static/: index.html  package.json
